--- a/style.css
+++ b/style.css
@@ -1,14 +1,104 @@
 *{
     font-family: 'Times New Roman', Times, serif;
+    box-sizing: border-box;
+
+    margin: 0;
+    padding: 0;
 
 }
 
 body{
-    max-width: 1200px;
-    margin: 0 auto;
+    
     background-color:#FFFDD0;
 }
 
-ul a{
+.main-list a{
     text-decoration: none;
+    color: black;
+
+
+    display: inline-block;
+    width: 100%;
+    padding: 20px;
+}
+
+.main-list li a:active{
+    font-weight: bolder;
+}
+
+
+.container{
+    position: relative;
+    max-width: 1200px;
+    margin: 100px auto;
+    text-align: center;
+
+    background-color: #fff;
+    border: 2px solid black;
+}
+
+.container .main-list{
+    list-style: none;
+}
+
+
+img{
+    width: 30%;
+    margin: 0 auto;
+    margin-bottom: 30px;
+}
+
+.main-list li:hover{
+    border: 1px solid black;
+    background-color: antiquewhite;
+}
+
+h1{
+
+    margin: 20px 0px 50px 0px;
+    text-shadow: 2px 0px yellow;
+}
+
+h2{
+
+   margin: 20px 0px;
+}
+
+
+ul{
+    list-style-position: inside;
+    margin-bottom: 30px;
+    line-height: 1.5;
+
+    padding: 20px;
+}
+
+ol{
+    list-style-position: inside;
+    margin-bottom: 30px;
+    line-height: 1.5;
+
+    padding: 20px;
+}
+
+.back-to-main img{
+    width: 50px;
+  
+}
+
+.back-to-main{
+    position: absolute;
+    bottom: 0;
+    right: 10px;
+}
+
+.steps,
+.description,
+.ingredients{
+    padding: 50px;
+}
+
+
+.steps{
+    margin-bottom: 100px;
 }
